--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -2,7 +2,8 @@
 # defaults file for juju4.fact
 
 fact_repo: https://github.com/fkie-cad/FACT_core.git
-fact_version: 4.0.1
+# renovate: datasource=github-releases depName=fkie-cad/FACT_core
+fact_version: '4.0.1'
 fact_user: _fact
 fact_home: /var/_fact
 fact_root: /var/_fact/FACT_core
