--- a/tasks/backup-restore.yml
+++ b/tasks/backup-restore.yml
@@ -21,7 +21,7 @@
   ansible.builtin.apt:
     name: cron
     state: present
-  when: ansible_os_family == 'Debian'
+  when: ansible_facts['os_family'] == 'Debian'
   register: pkg_result
   until: pkg_result is success
 
@@ -29,7 +29,7 @@
   ansible.builtin.dnf:
     name: crontabs
     state: present
-  when: ansible_os_family == "RedHat"
+  when: ansible_facts['os_family'] == "RedHat"
   register: pkg_result
   until: pkg_result is success
 
