--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -2,14 +2,14 @@
 # tasks file for juju4.fact
 
 - name: Include version-specific variables for Ubuntu.
-  ansible.builtin.include_vars: "{{ ansible_distribution }}-{{ ansible_distribution_version }}.yml"
-  when: ansible_distribution == 'Ubuntu'
+  ansible.builtin.include_vars: "{{ ansible_facts['distribution'] }}-{{ ansible_facts['distribution_version'] }}.yml"
+  when: ansible_facts['distribution'] == 'Ubuntu'
 - name: Include version-specific variables for RedHat
-  ansible.builtin.include_vars: "RedHat-{{ ansible_distribution_major_version }}.yml"
-  when: ansible_os_family == "RedHat" and ansible_distribution != 'Fedora'
+  ansible.builtin.include_vars: "RedHat-{{ ansible_facts['distribution_major_version'] }}.yml"
+  when: ansible_facts['os_family'] == "RedHat" and ansible_facts['distribution'] != 'Fedora'
 - name: Include for Fedora
   ansible.builtin.include_vars: "Fedora.yml"
-  when: ansible_distribution == 'Fedora'
+  when: ansible_facts['distribution'] == 'Fedora'
 
 - name: Include mongodb-thp
   ansible.builtin.include_tasks: mongodb-thp.yml
